fix description modal overflow

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -392,6 +392,10 @@
   border-radius: 4px;
   min-height: 100px;
   font-size: 0.9rem;
+
+  overflow-wrap: break-word; /* Tells the browser to break the word to the next line */
+  word-break: break-word;    /* Extra safety catch for certain browsers */
+  white-space: normal;       /* Ensures normal text wrapping is turned on */
 }
 
 .modal__text-box p {
